apps/base/gokapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gokapi
  namespace: gokapi
spec:
  selector:
    app.kubernetes.io/name: gokapi
  ports:
    - name: http
      port: 8080
      targetPort: http
